--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browser-sync": "^2.11.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-connect-php": "0.0.8",
     "gulp-cssnano": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-header": "^1.7.1",
@@ -21,5 +22,8 @@
     "gulp-sass": "^2.1.1",
     "gulp-uglify": "^1.5.1",
     "jshint": "^2.8.0"
+  },
+  "dependencies": {
+    
   }
 }
